# chat-workspace

./: .dockerignore  DOCKER.md  Dockerfile.frontend  README.md  docker-compose.yml  pubspec.yaml
backend/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  SUPABASE_SETUP.md
backend/migrations/: 20240101_init.sql  20241122000001_add_public_key.sql  20251123085852_add_message_index.sql
backend/src/: main.rs
backend/src/api/: error.rs  mod.rs
backend/src/api/handlers/: auth_handler.rs  geo_handler.rs  kyc_handler.rs  mod.rs  notification_handler.rs  subscription_handler.rs
backend/src/api/middleware/: auth_middleware.rs
backend/src/api/routers/: app_router.rs  mod.rs
backend/src/api/ws/: chat_ws.rs  mod.rs
backend/src/application/: mod.rs
backend/src/application/dtos/: auth_dto.rs  chat_dto.rs  e2ee_dto.rs  geo_dto.rs  kyc_dto.rs  mod.rs  notification_dto.rs  subscription_dto.rs  webrtc_dto.rs
backend/src/application/use_cases/: mod.rs
backend/src/domain/: errors.rs  mod.rs
backend/src/domain/entities/: conversation.rs  kyc_request.rs  message.rs  mod.rs  user.rs
backend/src/domain/repositories/: kyc_repository.rs  message_repository.rs  mod.rs  user_repository.rs
backend/src/domain/services/: auth_service.rs  mod.rs  notification_service.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/cron/: message_cleanup.rs  mod.rs
backend/src/infrastructure/db/: connection.rs  mod.rs
backend/src/infrastructure/repositories/: mod.rs  postgres_kyc_repository.rs  postgres_message_repository.rs  postgres_user_repository.rs
(+104 files in other folders)
